2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Andy Hedges
	<tmp1@hedges.net> to add more magic for the QuickTime files
	(Closes: #8936)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* po/POTFILES.skip: Patch from Torsten Schönfeld to add
	update-mime-database.c to the skipped files, as it was never
	translated anyway (Closes: #9565)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* shared-mime-info.pc.in: Patch from Ville Skyttä <ville.skytta@iki.fi>
	to move the shared-mime-info pkgconfig file to $(datadir), as it doesn't
	contain any arch-specific data (Closes: #9789)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* po/LINGUAS: Patch from Christian Persch to use po/LINGUAS
	to list the translated languages (Closes: #9619)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c: (open_or_die), (main): Patch from
	Yevgen Muntyan <muntyan@tamu.edu> to avoid abort()'ing when
	we can't open a specific file for writing (Closes: #9580)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* configure.in: Patch from Christian Persch to clean up the
	configure.in and Makefile.am files (Closes: #9618)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/x-bzip2 as an alias
	for bz2 archives, as used on Sourceforge, patch by Loïc Minier
	<lool+freedesktop@via.ecp.fr> (Closes: #9737)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Loïc Minier
	<lool+freedesktop@via.ecp.fr> to recognise Makefiles
	with shebang magic as well as name (Closes: #9738)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* po/az.po:
	* po/bg.po:
	* po/cs.po:
	* po/cy.po:
	* po/da.po:
	* po/de.po:
	* po/el.po:
	* po/eo.po:
	* po/es.po:
	* po/eu.po:
	* po/fi.po:
	* po/fr.po:
	* po/hu.po:
	* po/it.po:
	* po/ja.po:
	* po/ko.po:
	* po/lt.po:
	* po/ms.po:
	* po/nb.po:
	* po/nl.po: