@@ -3392,4 +3392,11 @@ command to generate the output files.
     </magic>
     <glob pattern="*.movie"/>
   </mime-type>
+  <mime-type type="application/vnd.emusic-emusic_package">
+    <_comment>eMusic download package</_comment>
+    <magic priority="50">
+      <match type="string" value="nF7YLao" offset="0"/>
+    </magic>
+    <glob pattern="*.emp"/>
+  </mime-type>
 </mime-info>
