@@ -1,5 +1,10 @@
 2007-02-02  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Patch from Matt Good <matt+fdo@matt-good.net>
+	to add the eMusic download package mime-type and magic (Closes: #8105)
+
+2007-02-02  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Patch from Andy Hedges
 	<tmp1@hedges.net> to add more magic for the QuickTime files
 	(Closes: #8936)
